refactor: 컬렉션에서 다루는 객체가 불변일 경우 굳이 복사해서 변경을 막을 필요없이 unmodifiable 메서드로 컬렉션 변경만 막기